Phase 3: Comprehensive testing and debugging of 2D FEA system
Co-authored-by: Junie <junie@jetbrains.com>